--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type='image/x-icon' href="images/music.png">
     
-    <meta name="referrer" content="no-referrer" />
+    <meta name="referrer" content="strict-origin-when-cross-origin">
     <title>KK随便听</title>
     <link rel="stylesheet" href="css/solid.css">
     <link rel="stylesheet" href="css/fontawesome.css">
