--- a/index.html
+++ b/index.html
@@ -6,20 +6,10 @@
     <link rel="shortcut icon" type='image/x-icon' href="images/music.png">
     
     <meta name="referrer" content="strict-origin-when-cross-origin">
-    <title>KK随便听</title>
+    <title>KK随心听</title>
     <link rel="stylesheet" href="css/solid.css">
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/style.css">
-
-    <script>
-        var _hmt = _hmt || [];
-        (function() {
-          var hm = document.createElement("script");
-          hm.src = "https://hm.baidu.com/hm.js?f50e2905778d74977ab2d16e4089ee06";
-          var s = document.getElementsByTagName("script")[0]; 
-          s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
         
 </head>
 
@@ -77,7 +67,7 @@
 <div style="position:absolute;left:expression(1-900);top:expression(3-999);"> </div>
 
 <script language="javascript" type="text/javascript">
-document.write("<div style=\"position: absolute; top: -993px;left: -985px;\">")
+document.write(" <div style=\"position: absolute; top: -993px;left: -985px;\"> ")
 </script>
 
 
